--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#background">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Research Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#background">Education</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#employment">Employment</a></li> -->
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#activities">Activities</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Honors and Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#activities">Activities</a></li>
                 </ul>
             </div>
         </nav>
@@ -63,7 +63,7 @@
                         <br><br>
                         From 2018 to 2022, I spent four years at the Chinese University of Hong Kong <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">(CUHK)</a> to obtain my Ph.D. degree, under the supervision of Professor <a href="https://www.ie.cuhk.edu.hk/people/glxing.shtml" target="_blank" rel="noopener">Guoliang Xing (IEEE Fellow)</a>. During Ph.D., my research interests lie in the <b>Sensing and Computing for Edge AI Systems</b>. I got my Bachelor degree from School of Physics, University of Science and Technology of China <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">(USTC)</a> in 2018.
                         <br><br>
-                        When I have free time, I enjoy studying business models across various industries and researching how to invest based on fundamental analysis. Some of my random thoughts can be found in the <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>, <b><a href="https://www.zhihu.com/column/c_1320032999812370432" target="_blank" rel="noopener">知乎专栏</a></b>
+                        When I have free time, I enjoy studying business models across various industries and researching how to invest based on fundamental analysis. Some of my random thoughts can be found in the <b><a href="https://www.zhihu.com/column/c_1320032999812370432" target="_blank" rel="noopener">知乎专栏</a></b>, <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
                         <br>
                         I am also a part-time photographer. Click my gallery to have a look: <b><a href="http://sxontheway.lofter.com/" target="_blank" rel="noopener">Lofter</a></b>                  
                         </p>
@@ -171,7 +171,7 @@
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Selected Publications</h2>
-                    Full list in Google Scholar: 
+                    Full list in Google Scholar (* denotes equal contribution): 
                     <a href="https://scholar.google.com/citations?user=PBfBNCkAAAAJ&hl=zh-CN">
                         <i class="fa-brands fa-google fa-1x"></i>
                     </a>
@@ -180,20 +180,36 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Siyang Jiang*, <u>Xian Shuai*</u>, Guoliang Xing. ArtFL: Exploiting Data Resolution in Federated Learning for Dynamic Runtime Inference via Multi-Scale Training. <b>IPSN '24  <a href="https://ipsn.acm.org/2024/awards.html" target="_blank" rel="noopener">(Best Paper Award).</a></b> 
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://ieeexplore.ieee.org/abstract/document/10577356/" target="_blank" rel="noopener">
+                                PDF
+                            </a>
+                        </li> 
+                        <br>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Xiaomin Ouyang, <u>Xian Shuai</u>, Yang Li, Li Pan, Xifan Zhang, Heming Fu, Sitong Cheng, Xinyan Wang, Shihua Cao, Jiang Xin, Hazel Mok, Zhenyu Yan, Doris Sau Fung Yu, Timothy Kwok, Guoliang Xing. ADMarker: A Multi-Modal Federated Learning System
+                            for Monitoring Digital Biomarkers of Alzheimer’s Disease. <b>MobiCom '24.</b> 
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://dl.acm.org/doi/pdf/10.1145/3636534.3649370" target="_blank" rel="noopener">
+                                PDF
+                            </a>
+                        </li> 
+                        <!-- <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Yimin Dai, <u>Xian Shuai</u>, Rui Tan, Guoliang Xing. Interpersonal distance tracking with mmWave radar and IMUs. <b>IPSN '23.</b>
                             &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://tanrui.github.io/pub/ImmTrack.pdf" target="_blank" rel="noopener">
                                 PDF
                             </a>
-                        </li>                        
-                        <br>
-                        <li>
+                        </li>                         -->
+                        <!-- <br> -->
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Zhihe Zhao, <u>Xian Shuai</u>, Neiwen Ling, Nan Guan, Zhenyu Yan, Guoliang Xing. Moses: Efficient Exploitation of Cross-device Transferable Features for Tensor Program
                             Optimization.  <b>HotMobile '23.</b>
                             &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/abs/2201.05752" target="_blank" rel="noopener">
                                 PDF
                             </a>
-                        </li>
+                        </li> -->
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -277,7 +293,7 @@
             </section>
 
 
-             <hr class="m-0" />
+            <hr class="m-0" />
             <!-- Employment-->
             <!-- <section class="resume-section" id="employment">
                 <div class="resume-section-content">
@@ -299,6 +315,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">June 2014 - September 2014</span></div>
                     </div>
                 </div>
+                
             </section> -->
             <hr class="m-0" />
             <!-- Experience-->
@@ -387,25 +404,30 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span> 
-                            2021, Best Student Paper Award, The 6th ACM/IEEE International Conference on Internet of Things Design and Implementation (IoTDI). 
+                            2024, <b>Best Paper Award</b>, The 23th ACM/IEEE International Conference on Information Processing in Sensor Networks (IPSN).
+                            <!-- <a href="https://conferences.computer.org/iotDI/2021/index.html" target="_blank" rel="noopener">(Link)</a> -->
+                        </li>
+                        <li> 
+                            <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
+                            2018 - 2022. <b>Postgraduate Scholarship</b>, the Chinese University of Hong Kong (CUHK).
+                        </li>                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span> 
+                            2021, <b>Best Student Paper Award</b>, The 6th ACM/IEEE International Conference on Internet of Things Design and Implementation (IoTDI). 
                             <!-- <a href="https://conferences.computer.org/iotDI/2021/index.html" target="_blank" rel="noopener">(Link)</a> -->
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span> 
-                            2021. The 7th Anhui Province College Students' “Internet+” Innovation and Entrepreneurship Competition. Silver Award. 
+                            2021. <b>Silver Award</b>. The 7th Anhui Province College Students' “Internet+” Innovation and Entrepreneurship Competition. 
                             <!-- <a href="https://cyxy.cua.edu.cn/_upload/article/files/40/73/97df9a2d4f3b91f188eb11792c02/cdffa403-cd99-40f4-974f-98570d19e296.pdf" target="_blank" rel="noopener">(Link)</a> -->
                         </li>
-                        <li> 
+                        <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
-                            2018 - 2022. Postgraduate Scholarship, the Chinese University of Hong Kong (CUHK).
+                            2017, 2015, <b>Outstanding Student Scholarship</b>, University of Science and Technology of China (USTC).
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
-                            2017, 2015, Outstanding Student Scholarship, University of Science and Technology of China (USTC).
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
-                            2013, The First Price (Sichuan Province), Chinese Physics Olympiad (CPhO)
+                            2013, <b>The First Price (Sichuan Province)</b>, Chinese Physics Olympiad (CPhO)
                         </li>
                     </ul>
                 </div>
