--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </style>
 </head>
 <body>
-    <h1>正在跳转到个人主页...</h1>
-    <p>如果页面没有自动跳转，请<a href="https://www.notion.so/XIAN-SHUAI-Alex-1cecd6c13ef680c7aafbd9d48612eea9">点击这里</a>。</p>
+    <h1>Redirecting to personal homepage...</h1>
+    <p>If you are not automatically redirected, please <a href="https://www.notion.so/XIAN-SHUAI-Alex-1cecd6c13ef680c7aafbd9d48612eea9">click here</a>.</p>
     
     <script>
         // JavaScript 重定向 (备用方法)
